# sentinel

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
data/ground_truth/: .gitkeep
data/processed/: .gitkeep
sentinel/: __init__.py  run.py
sentinel/agents/: __init__.py  anomaly_agent.py  eval_scoring_agent.py
sentinel/datasets/: chbmit.py  physionet.py  wesad.py
sentinel/fusion/: __init__.py  signal_packager.py
sentinel/metrics/: confidence_calibration.py  detection_recall.py  hallucination_rate.py  temporal_precision.py
sentinel/reporting/: report_generator.py
tests/: __init__.py
tests/unit/: test_eval_scoring_agent.py  test_metrics.py  test_signal_packager_accel.py  test_signal_packager_eeg.py  test_signal_packager_emg.py
