[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "Biosignal Event and Anomaly Evaluation Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "mne>=1.6.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.9.0",
]

[project.scripts]
sentinel = "sentinel.run:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
